codespaces-gitpod-style-starter/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace-wsid-svc
spec:
  selector:
    ws-id: "WSID"
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
